--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -20,8 +20,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
-        <TextView    android:layout_marginBottom="6dp"
-                     android:textColor="@color/black"
+        <TextView
+                android:layout_marginBottom="6dp"
+                android:textColor="@color/black"
                 android:text="Los comentarios vertidos dentro de la aplicación Agilidad sin Humo, no es responsabilidad de los creadores de la aplicación Agilidad sin Humo, salvo que quede expresamente especificado en esta."
                 android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
@@ -49,7 +50,7 @@
         <TextView
                 android:layout_marginBottom="6dp"
                 android:textColor="@color/black"
-                android:text="Aparte del derecho de uso no exclusivo, no sublicenciable, intransferible, personal y limitado de los usuarios tal como se especifica en la presente, no se confiere ningún derecho a dicho contenido ni a porciones del mismo, sin importar la forma en que aparezca, mediante su inclusión en la aplicación Agilidad sin Humo o mediante el acceso al mismo por parte del usuario. Un usuario no puede: "
+                android:text="Aparte del derecho de uso no exclusivo, no sublicenciable, intransferible, personal y limitado de los usuarios tal como se especifica en la presente, no se confiere ningún derecho a dicho contenido ni a porciones del mismo, sin importar la forma en que aparezca, mediante su inclusión en la aplicación Agilidad sin Humo o mediante el acceso al mismo por parte del usuario. Un usuario no puede:"
                 android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
 
@@ -62,15 +63,15 @@
             <TextView
                     android:layout_marginBottom="6dp"
                     android:textColor="@color/black"
-                    android:text="- Separar ningún contenido individual o componente de la aplicación Agilidad sin Humo para otro uso que el indicado en relación a la aplicación Agilidad sin Humo."
+                    android:text="-	Separar ningún contenido individual o componente de la aplicación Agilidad sin Humo para otro uso que el indicado en relación a la aplicación Agilidad sin Humo."
                     android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
 
             <TextView
                     android:layout_marginBottom="6dp"
                     android:textColor="@color/black"
-                    android:text="-	Incorporar una porción del mismo a los propios programas del usuario o recopilar cualquier porción en combinación con los propios programas del usuario."
-                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
+                    android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:text="-	Incorporar una porción del mismo a los propios programas del usuario o recopilar cualquier porción en combinación con los propios programas del usuario."/>
 
 
             <TextView
@@ -83,23 +84,23 @@
             <TextView
                     android:layout_marginBottom="6dp"
                     android:textColor="@color/black"
-                    android:text="-	Vender, arrendar, ceder, prestar, distribuir, comunicar públicamente, transformar o sublicenciar la Aplicación Móvil o conceder en modo alguno cualquier derecho a la Aplicación Móvil absoluta o parcialmente. "
-                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
+                    android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:text="-	Vender, arrendar, ceder, prestar, distribuir, comunicar públicamente, transformar o sublicenciar la Aplicación Móvil o conceder en modo alguno cualquier derecho a la Aplicación Móvil absoluta o parcialmente."/>
         </LinearLayout>
 
 
         <TextView
                 android:layout_marginBottom="6dp"
                 android:textColor="@color/black"
-                android:text="Los creadores  de la aplicación Agilidad sin Humo serán responsable de todo mantenimiento o soporte técnico de la aplicación Agilidad sin Humo; ningún tercero será responsable de brindar servicios de mantenimiento o soporte técnico para la aplicación Agilidad sin Humo."
-                android:layout_width="match_parent" android:layout_height="wrap_content"/>
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:text="Los creadores  de la aplicación Agilidad sin Humo serán responsable de todo mantenimiento o soporte técnico de la aplicación Agilidad sin Humo; ningún tercero será responsable de brindar servicios de mantenimiento o soporte técnico para la aplicación Agilidad sin Humo."/>
 
 
         <TextView
                 android:layout_marginBottom="6dp"
                 android:textColor="@color/black"
-                android:text="Los creadores  de la aplicación Agilidad sin Humo, se reservan el derecho de enmendar, complementar o suspender total o parcialmente la aplicación Agilidad sin Humo en forma ocasional. Asimismo, los creadores de la aplicación Agilidad sin Humo se reservan el derecho de cambiar los Términos y Condiciones en cualquier momento, con vigencia inmediata a partir del momento que se actualiza la aplicación Agilidad sin Humo. Los términos “usuario” y “usuarios” se refieren a todo individuo o entidad que use, acceda, descargue, instale, obtenga o brinde información desde y hacia la aplicación Agilidad sin Humo. Todas las referencias al plural en la presente incluirán al singular y las referencias al singular incluirán al plural salvo que se desprenda otra interpretación del contexto."
-                android:layout_width="match_parent" android:layout_height="wrap_content"/>
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:text="Los creadores  de la aplicación Agilidad sin Humo, se reservan el derecho de enmendar, complementar o suspender total o parcialmente la aplicación Agilidad sin Humo en forma ocasional. Asimismo, los creadores de la aplicación Agilidad sin Humo se reservan el derecho de cambiar los Términos y Condiciones en cualquier momento, con vigencia inmediata a partir del momento que se actualiza la aplicación Agilidad sin Humo. Los términos “usuario” y “usuarios” se refieren a todo individuo o entidad que use, acceda, descargue, instale, obtenga o brinde información desde y hacia la aplicación Agilidad sin Humo. Todas las referencias al plural en la presente incluirán al singular y las referencias al singular incluirán al plural salvo que se desprenda otra interpretación del contexto."/>
 
         <TextView
                 android:layout_marginBottom="6dp"
