Cambios de HArvey

--- a/app/src/main/res/layout/activity_dertail_product.xml
+++ b/app/src/main/res/layout/activity_dertail_product.xml
@@ -116,7 +116,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@android:color/transparent"
-                                android:tint="@color/md_green_700"
+                                android:tint="#00A242"
                                 android:src="@drawable/happy"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -139,7 +139,7 @@
                                 android:layout_height="wrap_content"
                                 android:padding="6dp"
                                 android:backgroundTint="@android:color/transparent"
-                                android:tint="@color/md_yellow_700"
+                                android:tint="#FFB600"
                                 android:src="@drawable/neutral"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -163,7 +163,7 @@
                                 android:layout_height="wrap_content"
                                 android:padding="6dp"
                                 android:backgroundTint="@android:color/transparent"
-                                android:tint="@color/md_red_700"
+                                android:tint="#FF3C25"
                                 android:src="@drawable/sad"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
