--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@drawable/quadradoscrum"
+        android:background="@drawable/quadradonuevo"
         tools:context=".view.ui.activity.NewUserActivity">
 
     <LinearLayout
