--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -13,7 +13,7 @@
 
 
     <androidx.appcompat.widget.AppCompatImageView
-            android:src="@drawable/logo_header"
+            android:src="@drawable/finallogo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
