--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorPrimary</item>
 
         <item name="drawerArrowStyle">@style/WhiteDrawerIconStyle</item>
-        <item name="android:actionMenuTextColor">@color/colorWhite</item>
+        <item name="android:actionMenuTextColor">@color/text_color</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
@@ -17,7 +17,7 @@
 
     <style name="WhiteDrawerIconStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
-        <item name="color">@android:color/white</item>
+        <item name="color">@color/text_color</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -27,7 +27,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="error_appearance" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/text_color</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -37,7 +37,7 @@
     </style>
 
     <style name="collapsingToolbarLayoutTitleColor" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textColor">@color/md_white_1000</item>
+        <item name="android:textColor">@color/text_color</item>
     </style>
 
     <style name="WhiteTheme" parent="Theme.AppCompat.Light.NoActionBar">
