--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,11 @@
     </style>
 
     <style name="collapsingToolbarLayoutTitleColor" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textColor">@color/md_white_1000</item>
+        <item name="android:textColor">@color/text_color</item>
+    </style>
+
+    <style name="expandedToolbarLayoutTitleColor" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="WhiteTheme" parent="Theme.AppCompat.Light.NoActionBar">
