--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -32,6 +32,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
+                android:theme="@style/DarkThemeTheme"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -58,6 +59,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginBottom="10dp"
+                android:theme="@style/DarkThemeTheme"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -84,6 +86,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginBottom="10dp"
+                android:theme="@style/DarkThemeTheme"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
