--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,6 +31,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
+                android:theme="@style/LoginTheme"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -56,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
+                android:theme="@style/LoginTheme"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -158,7 +160,7 @@
                     android:textSize="14sp"/>
 
             <TextView
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Creala aquí."
