--- a/app/src/main/res/layout/activity_dertail_product.xml
+++ b/app/src/main/res/layout/activity_dertail_product.xml
@@ -216,7 +216,7 @@
                         android:contentDescription="@null"
                         android:foreground="?attr/selectableItemBackground"
                         android:src="@drawable/ic_send_white_24dp"
-                        android:tint="@color/colorPrimaryDark"/>
+                        android:tint="@color/text_color"/>
 
             </LinearLayout>
 
